--- a/docs/native.adoc
+++ b/docs/native.adoc
@@ -48,7 +48,7 @@ We use a profile because, you will see very soon, packaging the native image tak
 
 Create a native executable by once again opening the command palette and choose **Build Native Quarkus App**. This will execute `mvn package -Pnative` behind the scenes. The `-Pnative` argument selects the `native` maven profile which invokes the Graal compiler.
 
-**This will take about 3-4 minutes to finish. Wait for it!**
+**This will take about 2-3 minutes to finish. Wait for it!**
 
 [NOTE]
 ====
@@ -115,7 +115,7 @@ Nice!
 
 == Cleanup
 
-Go to the Terminal in which you ran the native app and press kbd:[CTRL+C] to stop our native app (or close the Terminal window with the `X` button next to its title).
+Go to the Terminal in which you ran the native app and press kbd:[CTRL+C] to stop our native app (or close the Terminal window with the `X` button next to its title). **Be sure to leave your Live Coding Terminal open!**
 
 == Congratulations!
 
