--- a/docs/panache.adoc
+++ b/docs/panache.adoc
@@ -32,9 +32,9 @@ The database connection details (JDBC url, database credentials) are specified i
 ----
 %prod.quarkus.datasource.url: jdbc:postgresql://postgres-database:5432/person
 %prod.quarkus.datasource.driver: org.postgresql.Driver
-%dev.quarkus.datasource.url=jdbc:h2:tcp://localhost/person:default
+%dev.quarkus.datasource.url=jdbc:h2:mem:person:default
 %dev.quarkus.datasource.driver=org.h2.Driver
-%test.quarkus.datasource.url=jdbc:h2:tcp://localhost/person:default
+%test.quarkus.datasource.url=jdbc:h2:mem:person:default
 %test.quarkus.datasource.driver=org.h2.Driver
 ----
 
