--- a/docs/intro.adoc
+++ b/docs/intro.adoc
@@ -7,6 +7,16 @@ Quarkus is a Kubernetes Native Java stack tailored for GraalVM & OpenJDK HotSpot
 
 Throughout this lab you'll discover how Quarkus can make your development of cloud native apps faster and more productive.
 
+== First Step: Set Your Username!
+
+In the above box, enter the user ID you were assigned:
+
+image::setuser.png[Set User ID above, 900]
+
+This will customize the links and copy/paste code for this workshop. If you accidently type the wrong username, just click the green recycle icon to reset it.
+
+Throughout this lab you'll discover how Quarkus can make your development of cloud native apps faster and more productive.
+
 == Click-to-Copy
 
 You will see various code and command blocks throughout these exercises which can be copy/pasted directly by clicking anywhere on the block of text:
@@ -34,7 +44,10 @@ echo "This is a bash shell command that you can copy/paste by clicking"
 
 You will be using Red Hat CodeReady Workspaces, an online IDE based on https://www.eclipse.org/che/[Eclipe Che,window=_blank]. **Changes to files are auto-saved every few seconds**, so you don't need to explicitly save changes.
 
-To get started, {{ CHE_URL }}[access the Che instance,window=_blank] and log in using the username and password you've been assigned (e.g. `{{ CHE_USER_NAME }}/{{ CHE_USER_PASSWORD }}`):
+To get started, {{ CHE_URL }}[access the Che instance,window=_blank] and log in using the username and password you've been assigned:
+
+* *Username*: {{ USER_ID }}
+* *Password*: {{ WORKSHOP_CHE_USER_PASSWORD }}
 
 image::che-login.png[login,400]
 
@@ -48,8 +61,4 @@ image::che-workspace.png[workspace,800]
 
 Users of Eclipse, IntelliJ IDEA or Visual Studio Code will see a familiar layout: a project/file browser on the left, a code editor on the right, and a terminal at the bottom. You'll use all of these during the course of this workshop, so keep this browser tab open throughout. **If things get weird, you can simply reload the browser tab to refresh the view.**
 
-To gain extra screen space, click on the yellow arrow to hide the left menu (you won't need it):
-
-image::che-realestate.png[screen,600]
-
-
+Ready? Let's go!
